<resources>

    <string name="app_name">JustCards</string>

    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_avatar_selection">Choose your avatar</string>
    <string name="title_activity_select_game">Select a game</string>
    <string name="title_activity_select_cards">Select cards</string>
    <string name="title_activity_create_game">Start a new game</string>
    <string name="title_activity_game_view_manager">My game</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="msg_no_cards">No cards</string>

    <string name="register">Register</string>
    <string name="prompt_username">Username</string>
    <string name="create_game">Start New Game</string>
    <string name="enter_game_id">Enter Game ID:</string>
    <string name="join_game">Join Game</string>
    <string name="game_number">Game Number:  </string>
    <string name="start_game">Start Game</string>
    <string name="select_cards">Select Cards</string>

    <string name="gcm_sender_id">id:761078236734</string>

    <string name="msg_send_to_table">Move to table</string>
    <string name="msg_keep_on_dealer_stack">Keep on dealer stack</string>
    <string name="msg_discard">Discard</string>

    <string name="dealing_options">Deal Options</string>
    <string name="card_for_each_player">Cards for each player</string>
    <string name="shuffle_before_dealing">Shuffle before dealing</string>
    <string name="remaining_cards_after_dealing">Remaining cards after dealing</string>
    <string name="deal_now">Deal Now</string>
    <string name="deal_to_self">Deal to Self</string>
    <string name="rule_view_table_card">Can table cards be seen by players</string>
    <string name="network_failure_msg">FAILED TO CONNECT TO NETWORK</string>
    <string name="avatar_image_description">User Avatar Image</string>
    <string name="lbl_score_board">Score Board</string>
    <string name="msg_save">Save</string>
    <string name="deal">Deal</string>
    <string name="score">Score</string>
    <string name="comment">Type a message</string>
    <string name="msg_add_another_deck">Add another deck</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="share_game_number">Share this game number with others to invite in the game!</string>
    <string name="msg_share">"Join us for a fun filled cards game on JustCards https://play.google.com/store/apps/details?id=org.justcards.android with game id: "</string>
    <string name="msg_no_app_sharing">No app found for sharing</string>
    <string name="msg_show">Show</string>
    <string name="msg_hide">Hide</string>
    <string name="zero">0</string>
    <string name="msg_congratulations_winner">Congratulations to the Winners of this round!</string>
    <string name="msg_show_dealer_view">Switch dealer view</string>
    <string name="msg_show_player_view">Switch player view</string>
    <string name="msg_end_round">End Round</string>
    <string name="msg_okay">Okay</string>
    <string name="msg_selected_cards_count">Selected %d cards</string>
    <string name="msg_game_number">Game number:</string>
    <string name="msg_enter_game_number">Please enter game number first</string>
    <string name="reselect">Reselect</string>
    <string name="or">OR</string>

    <string name="facebook_app_id">646487625523989</string>
    <string name="fb_login_protocol_scheme">fb646487625523989</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="msg_close">Close</string>
    <string name="msg_tutorial_navigation_portrait">Swipe to navigate through Tutorial screens. \nHit Close to exit.</string>
    <string name="msg_tutorial_navigation_landscape">Swipe to navigate \nthrough Tutorial screens. \nHit Close to exit.</string>
    <string name="msg_game_invalid_title">Game invalid</string>
    <string name="msg_game_invalid_desc">This game id not found. Either create new game or enter a valid id.</string>
    <string name="msg_wait_to_deal">Please wait for the dealer (player who created this game id) to deal the cards and they will appear here.</string>
    <string name="msg_switch_recommendation">Cards dealt successfully. Now it\'s recommended to Switch to Player View using button at right bottom to play the game. Come to this Dealer View again to end the round and score. Enjoy the game!</string>

    <string-array name="array_tutorial_strings">
        <item>Only 1 person should select cards, share code and start the game. This player becomes dealer as well.</item>
        <item>Use the code provided by the dealer to join the game.</item>
        <item>Only dealer: Configure rules and deal the cards. Other players will see "No cards" message on their screen until cards are dealt.</item>
        <item>Drag and drop cards to play.</item>
        <item>Access game logs and messages anytime during the game.</item>
        <item>Only dealer: Use the button to toggle between dealer and player view.</item>
    </string-array>
</resources>