<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_join_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.bootcamp.fiftytwo.activities.CreateJoinGameActivity">

    <Button
        android:text="@string/create_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="80dp"
        android:id="@+id/createGameButton"
        android:textColor="@color/white"
        android:background="@color/colorAccent"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dotted_border"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/createGameButton"
        android:layout_marginTop="50dp"
        android:padding="20dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/gameIdInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/gameIdTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_game_id"
                android:inputType="number"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:text="@string/join_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gameIdInputLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:id="@+id/joinGameButton" />

    </RelativeLayout>


</RelativeLayout>
