<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_create_join_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background"
    tools:context="org.bootcamp.fiftytwo.activities.SelectGameActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ToolbarTheme"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/welcomeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/accent_translucent_background">

                <ImageView
                    android:id="@+id/ivAvatar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/avatar_image_description"
                    tools:background="@color/colorAccentTranslucent"/>

                <TextView
                    android:id="@+id/tvWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@+id/ivAvatar"
                    android:layout_toRightOf="@+id/ivAvatar"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    tools:text="Welcome Username!"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvWelcome"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/ivAvatar"
                    android:layout_toRightOf="@+id/ivAvatar"
                    android:text="@string/what_would_you_like_to_do"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/joinGameSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcomeLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/primary_translucent_background"
                android:padding="20dp">

                <EditText
                    android:id="@+id/etGameName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/foggy_textbox"
                    android:hint="@string/enter_game_id"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="20sp"/>

                <Button
                    android:id="@+id/btnJoinGame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etGameName"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/black_button"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/join_game"
                    android:textColor="@color/white"/>

            </RelativeLayout>

            <Button
                android:id="@+id/btnCreateGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/joinGameSection"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/red_button"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/create_game"
                android:textColor="@color/white"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>